--- a/server/mono/Cargo.toml
+++ b/server/mono/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.69"
 array-init = "2.1.0"
 async-trait = "0.1.64"
 clap = { version = "4.1.8", features = ["derive"] }
-config = { version = "0.13.3", features = ["yaml"] }
+config = { version = "0.13.3", features = ["toml"] }
 data = { version = "0.1.0", path = "../data" }
 game = { version = "0.1.0", path = "../game" }
 log = "0.4.17"
@@ -22,3 +22,4 @@ tokio = "1.25.0"
 uuid = "1.3.0"
 shroom_net_derive = "0.1" 
 shroom_net = "0.1"
+dotenv = "0.15.0"
