--- a/server/mono/Cargo.toml
+++ b/server/mono/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.159", features = ["derive"] }
 shrooming = { version = "0.1.0", path = "../shrooming" }
 tokio = "1.25.0"
 uuid = "1.3.0"
-shroom_net_derive = "0.1" 
-shroom_net = "0.1"
+shroom_net_derive = "0.2"
+shroom_net = "0.2.5"
 dotenv = "0.15.0"
+proto95 = { version = "0.1.0", path = "../proto95" }
