--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "yaml.schemaStore.enable": true,
     "yaml.schemas": {
         "scripts/schemas/npc.schema.yaml": "scripts/npc/*.yaml"
-    }
+    },
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
