Add some more stuff

--- a/server/mono/Cargo.toml
+++ b/server/mono/Cargo.toml
@@ -24,3 +24,4 @@ shroom_net_derive = "0.2.2"
 shroom_net = "0.3"
 dotenv = "0.15"
 proto95 = { version = "0.1.0", path = "../proto95" }
+warp = "0.3.5"
