--- a/data/game_data/Cargo.toml
+++ b/data/game_data/Cargo.toml
@@ -25,3 +25,4 @@ serde-generate = "0.25"
 serde-reflection = "0.3"
 serde_json = "1"
 string-interner = "0.14"
+shroom-wz ={ git = "https://github.com/OpenRustMS/shroom_data" }
