--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
+resolver = "2"
 members = [
     # Data
     # "data/re-wz",
     "data/game_data",
 
     # client
-    #"client/shroom_launchar",
+    "client/shroom_launchar",
 
     # server
     "server/shrooming",
@@ -20,5 +21,5 @@ exclude = ["client/shroom_hook","client/shroom_ffi"]
 
 # Shroom crates for now
 [patch.crates-io]
-shroom_net = { git = "https://github.com/OpenRustMS/net" }
-shroom_net_derive = { git = "https://github.com/OpenRustMS/net" }
+shroom-net = { git = "https://github.com/OpenRustMS/net.git", branch = "jz/tick_feature" }
+shroom-pkt = { git = "https://github.com/OpenRustMS/net.git", branch = "jz/tick_feature" }
