--- a/config/base.toml
+++ b/config/base.toml
@@ -2,5 +2,5 @@ version = "v0.1a"
 server_name = "reMember"
 bind_ip = "0.0.0.0"
 base_port = 8484
-shrooming_port = 8490
+tuf_repo_port = 8000
 client_version = 95
