--- a/server/data/Cargo.toml
+++ b/server/data/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [dependencies]
 anyhow = "1"
 array-init = "2.1"
@@ -29,21 +30,27 @@ num_enum = "0.7"
 proto95 = { version = "0.1", path = "../proto95" }
 ractor = "0.9"
 rand = "0.8"
-raqote = "0.8"
 rstar = "0.11"
 sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
 serde = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["rt", "macros"] }
-shroom_net_derive = "0.2.2"
-shroom_net = "0.3"
-password-hash = "0.5.0"
-argon2 = "0.5.1"
+tokio-util ={ version = "0.7", features = ["time"]}
+shroom-pkt = "0.1.1"
+shroom-net = "0.4"
+password-hash = "0.5"
+argon2 = "0.5"
 bytemuck = "1.13.1"
 euclid = "0.22.9"
 tracker = "0.2.1"
 derive_more = "0.99.17"
 smallvec = "1.11.0"
+nom = "7.1.3"
+serde_json = "1"
+evalexpr = { version = "11.1.0", features = ["serde"] }
+trackr = "0.1"
+num = "0.4.1"
+
 
 [dependencies.uuid]
 version = "1"
