--- a/server/login/Cargo.toml
+++ b/server/login/Cargo.toml
@@ -13,5 +13,5 @@ data = { version = "0.1.0", path = "../data" }
 log = "0.4"
 proto95 = { version = "0.1.0", path = "../proto95" }
 tokio = "1"
-shroom_net_derive = "0.2.2"
-shroom_net = "0.3"
+shroom-pkt = "0.1.1"
+shroom-net = "0.4"
