--- a/server/proto95/Cargo.toml
+++ b/server/proto95/Cargo.toml
@@ -14,6 +14,6 @@ geo = "0.26"
 num_enum = "0.7"
 packed_struct = "0.10.1"
 paste = "1.0.11"
-shroom_net_derive = "0.2.2"
-shroom_net = "0.3"
+shroom-pkt = "0.1.1"
+shroom-net = "0.4"
 euclid = "0.22.9"
