--- a/server/data/Cargo.toml
+++ b/server/data/Cargo.toml
@@ -50,6 +50,7 @@ serde_json = "1"
 evalexpr = { version = "11.1.0", features = ["serde"] }
 trackr = "0.1"
 num = "0.4.1"
+wasmtime = "13.0.0"
 
 
 [dependencies.uuid]
