--- a/server/mono/Cargo.toml
+++ b/server/mono/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1"
+anyhow =  { version = "1", features = ["backtrace"] }
 array-init = "2"
 async-trait = "0.1"
-clap = { version = "4.3", features = ["derive"] }
+clap = { version = "4", features = ["derive"] }
 config = { version = "0.13", features = ["toml"] }
 data = { version = "0.1", path = "../data" }
 game = { version = "0.1", path = "../game" }
@@ -20,11 +20,11 @@ serde = { version = "1", features = ["derive"] }
 shrooming = { version = "0.1", path = "../shrooming" }
 tokio = "1"
 uuid = "1"
-shroom-pkt = "0.1.1"
+shroom-pkt = "0.1"
 shroom-net = "0.4"
 dotenv = "0.15"
 proto95 = { version = "0.1.0", path = "../proto95" }
-warp = "0.3.5"
+warp = "0.3"
 
 
 [dependencies.openssl]
