--- a/crates/data/Cargo.toml
+++ b/crates/data/Cargo.toml
@@ -29,11 +29,16 @@ num_enum = "0.7"
 ractor = "0.9"
 rand = "0.8"
 rstar = "0.11"
-sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
+sea-orm = { version = "0.12", features = [
+    "sqlx-sqlite",
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+    "macros",
+] }
 serde = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["rt", "macros"] }
-tokio-util ={ version = "0.7", features = ["time"]}
+tokio-util = { version = "0.7", features = ["time"] }
 password-hash = "0.5"
 argon2 = "0.5"
 bytemuck = "1.13.1"
@@ -49,13 +54,9 @@ meta = { version = "0.1", path = "../../crates/meta" }
 shroom-net = "0.4"
 shroom-pkt = "0.1.1"
 proto95 = { version = "0.1.0", path = "../../crates/proto95" }
+plugins = { version = "0.1.0", path = "../plugins" }
 
 
 [dependencies.uuid]
 version = "1"
-features = [
-    "v4",
-    "fast-rng",
-    "macro-diagnostics",
-]
-
+features = ["v4", "fast-rng", "macro-diagnostics"]
