--- a/crates/meta/Cargo.toml
+++ b/crates/meta/Cargo.toml
@@ -23,7 +23,7 @@ geo-svg = "0.5.0"
 itertools = "0.11.0"
 proto95 = { version = "0.1.0", path = "../proto95" }
 rand = "0.8.5"
-rstar = "0.11.0"
+rstar = { version = "0.11.0", features = ["serde"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 pest = { version = "2.7.4" }
@@ -31,3 +31,4 @@ pest_derive = "2.7.4"
 lazy_static = "1.4.0"
 regress = "0.7.1"
 either = { version = "1.9.0", features = ["serde"] }
+euclid = "0.22.9"
